Removing topological sorting as it's not needed for time being (if even ever). Refactoring of bootstrapping framework. Adding handler for product definitions and it's fields.

--- a/source/Models/Models.csproj
+++ b/source/Models/Models.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CategoryDefinitions\DefaultCategoryDefinition.cs" />
+    <Compile Include="ProductDefinitions\MyProductDefinition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -51,6 +52,9 @@
       <Project>{26ac5ce1-d365-483c-b536-b128ec826614}</Project>
       <Name>Core</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
