--- a/source/Core/Core.csproj
+++ b/source/Core/Core.csproj
@@ -47,11 +47,20 @@
     <Reference Include="UCommerce">
       <HintPath>..\..\libraries\uCommerce 6.1.0.14195\UCommerce.dll</HintPath>
     </Reference>
+    <Reference Include="UCommerce.Infrastructure, Version=6.1.0.14195, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\UCommerce.Infrastructure.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attributes\BaseDefinitionAttribute.cs" />
+    <Compile Include="Attributes\BaseDefinitionFieldAttribute.cs" />
     <Compile Include="Attributes\CategoryDefinitionAttribute.cs" />
-    <Compile Include="Attributes\DefinitionFieldAttribute.cs" />
+    <Compile Include="Attributes\CategoryDefinitionFieldAttribute.cs" />
+    <Compile Include="Attributes\ProductDefinitionAttribute.cs" />
+    <Compile Include="Attributes\ProductDefinitionFieldAttribute.cs" />
     <Compile Include="Attributes\UCommerceAttribute.cs" />
+    <Compile Include="CodeFirstBootstrapper.cs" />
     <Compile Include="Configuration\CodeFirstConfiguration.cs" />
     <Compile Include="Configuration\ConfigurationProvider.cs" />
     <Compile Include="Configuration\IConfigurationProvider.cs" />
@@ -62,9 +71,8 @@
     <Compile Include="Extensions\TypeExtensions.cs" />
     <Compile Include="Handlers\CategoryDefinitionHandler.cs" />
     <Compile Include="Handlers\IHandler.cs" />
+    <Compile Include="Handlers\ProductDefinitionHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sorting\DependencyField.cs" />
-    <Compile Include="Sorting\TopologicalSort.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
