--- a/source/Core/Core.nuspec
+++ b/source/Core/Core.nuspec
@@ -7,10 +7,14 @@
     <authors>RagingRudolf</authors>
     <owners>RagingRudolf</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Test description</description>
-    <releaseNotes>Release notes.</releaseNotes>
+    <description>CodeFirst for uCommerce. Eliminate the manual process of creating definitions in uCommerce backend. Simple creation of definitions and easy deployment.</description>
+    <releaseNotes>
+      0.0.1: Creation of category and product definitions and fields.
+    </releaseNotes>
+    <projectUrl>https://github.com/RagingRudolf/CodeFirst.UCommerce</projectUrl>
+    <licenseUrl>https://github.com/RagingRudolf/CodeFirst.UCommerce/blob/master/LICENSE.md</licenseUrl>
     <copyright>Copyright 2014</copyright>
-    <tags>codefirst uCommerce</tags>
+    <tags>codefirst ucommerce</tags>
   </metadata>
   <files>
     <file src="..\..\nuget\web.config.install.xdt" target="content" />
