Creating new attribute for setting language descriptions for fields on category definition and product definitions.

--- a/source/Core/Core.csproj
+++ b/source/Core/Core.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Attributes\BaseDefinitionFieldAttribute.cs" />
     <Compile Include="Attributes\CategoryDefinitionAttribute.cs" />
     <Compile Include="Attributes\CategoryDefinitionFieldAttribute.cs" />
+    <Compile Include="Attributes\LanguageDescriptionAttribute.cs" />
     <Compile Include="Attributes\ProductDefinitionAttribute.cs" />
     <Compile Include="Attributes\ProductDefinitionFieldAttribute.cs" />
     <Compile Include="Attributes\UCommerceAttribute.cs" />
