--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\source\Cms.Umbraco\packages.config" />
   <repository path="..\source\Core\packages.config" />
+  <repository path="..\source\Tests\packages.config" />
 </repositories>
