--- a/source/Models/Models.csproj
+++ b/source/Models/Models.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="CampaignDefinitions\SuperCampaign.cs" />
     <Compile Include="CategoryDefinitions\DefaultCategoryDefinition.cs" />
+    <Compile Include="PaymentMethodDefinitions\GlobalCollect.cs" />
     <Compile Include="ProductDefinitions\MyProductDefinition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
