--- a/source/Models/Models.csproj
+++ b/source/Models/Models.csproj
@@ -42,6 +42,7 @@
     <Compile Include="CampaignDefinitions\SuperCampaign.cs" />
     <Compile Include="CategoryDefinitions\DefaultCategoryDefinition.cs" />
     <Compile Include="DataTypes\MyDataType.cs" />
+    <Compile Include="DataTypes\MyEnumDataType.cs" />
     <Compile Include="PaymentMethodDefinitions\GlobalCollect.cs" />
     <Compile Include="ProductDefinitions\MyProductDefinition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
