--- a/source/Models/Models.csproj
+++ b/source/Models/Models.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{E2E58D89-FCBF-4DF8-AB37-F526FCBECC5B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RagingRudolf.Examples.Models</RootNamespace>
-    <AssemblyName>RagingRudolf.Examples.Models</AssemblyName>
+    <RootNamespace>RagingRudolf.UCommerce.CodeFirst.Examples</RootNamespace>
+    <AssemblyName>RagingRudolf.UCommerce.CodeFirst.Examples</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
