--- a/source/Tests/Tests.csproj
+++ b/source/Tests/Tests.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{A3CDC85C-6AD8-4172-8F8F-FE41682ADDA2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RagingRudolf.CodeFirst.UCommerce.Tests</RootNamespace>
-    <AssemblyName>RagingRudolf.CodeFirst.UCommerce.Tests</AssemblyName>
+    <RootNamespace>RagingRudolf.UCommerce.CodeFirst.Tests</RootNamespace>
+    <AssemblyName>RagingRudolf.UCommerce.CodeFirst.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
