Renaming types. Adding type extensions and tests.

--- a/source/Core/Core.csproj
+++ b/source/Core/Core.csproj
@@ -82,7 +82,7 @@
     <Compile Include="Handlers\PaymentMethodDefinitionHandler.cs" />
     <Compile Include="Handlers\ProductDefinitionHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="DefinitionType.cs" />
+    <Compile Include="BuiltInDefinitionType.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
