Encapsulate handlers into a factory to hide uCommerce session provider.

--- a/source/Core/Core.csproj
+++ b/source/Core/Core.csproj
@@ -73,6 +73,8 @@
     <Compile Include="Extensions\PropertyInfoExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Extensions\TypeExtensions.cs" />
+    <Compile Include="Factories\DefinitionFactory.cs" />
+    <Compile Include="Factories\IDefinitionFactory.cs" />
     <Compile Include="Handlers\BaseDefinitionHandler.cs" />
     <Compile Include="Handlers\CampaignDefinitionHandler.cs" />
     <Compile Include="Handlers\CategoryDefinitionHandler.cs" />
