--- a/source/Models/Models.csproj
+++ b/source/Models/Models.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CampaignDefinitions\SuperCampaign.cs" />
+    <Compile Include="CategoryDefinitions\CampaignCategoryDefinition.cs" />
     <Compile Include="CategoryDefinitions\DefaultCategoryDefinition.cs" />
     <Compile Include="PaymentMethodDefinitions\GlobalCollect.cs" />
     <Compile Include="ProductDefinitions\MyProductDefinition.cs" />
