Adding a definition creator which handles new definition attribute. Replacing old IHandlers. Making old IHandler not reachable. Other refactorings.

--- a/source/Core/Core.csproj
+++ b/source/Core/Core.csproj
@@ -75,6 +75,8 @@
     <Compile Include="Configuration\ConfigurationProvider.cs" />
     <Compile Include="Configuration\IConfigurationProvider.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="Creators\DefinitionCreator.cs" />
+    <Compile Include="Creators\IDefinitionCreator.cs" />
     <Compile Include="Extensions\EnumerationExtensions.cs" />
     <Compile Include="Extensions\PropertyInfoExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
