--- a/source/Core/Core.csproj
+++ b/source/Core/Core.csproj
@@ -64,8 +64,9 @@
     <Compile Include="Attributes\DataType\DataTypeAttribute.cs" />
     <Compile Include="Attributes\DataType\EnumValueAttribute.cs" />
     <Compile Include="Attributes\Shared\BaseDefinitionFieldAttribute.cs" />
+    <Compile Include="Bootstrapping\AssemblyScanBootstrap.cs" />
     <Compile Include="BuiltInDataType.cs" />
-    <Compile Include="CodeFirstBootstrapper.cs" />
+    <Compile Include="Bootstrapping\AssemblyByConfigurationBootstrap.cs" />
     <Compile Include="Configuration\CodeFirstConfigurationSection.cs" />
     <Compile Include="Configuration\ConfigurationProvider.cs" />
     <Compile Include="Configuration\IConfigurationProvider.cs" />
@@ -80,6 +81,7 @@
     <Compile Include="Extensions\TypeExtensions.cs" />
     <Compile Include="Factories\DefinitionCreatorFactory.cs" />
     <Compile Include="Factories\IDefinitionCreatorFactory.cs" />
+    <Compile Include="Bootstrapping\ICanBootstrap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BuiltInDefinitionType.cs" />
   </ItemGroup>
