Updating nuspec release notes.

--- a/source/Core/Core.nuspec
+++ b/source/Core/Core.nuspec
@@ -9,16 +9,13 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>CodeFirst for uCommerce. Eliminate the manual process of creating definitions in uCommerce backend. Simple creation of definitions and easy deployment.</description>
     <releaseNotes>
-      1.0.0-alpha:
-        BREAKING CHANGES:
-          Streamline do
-          New attributes has been introduced for decorate classes used for definitions and old ones has been removed.
-          Rewriting a lot of internal code.
-          Update uCommerce target version to 6.7.5.
-          Namespaces has been renamed.
-          
-        UPDGRADE:
-          Still possible but can be time consuming due to changes in namespaces and decorators.
+      1.0.0-beta:
+      BREAKING CHANGES:
+        CodeFirstBootstrapper has no longer a static Initialize method. Class needs to be instantiated now.
+        Renamed CodeFirstBootstrapper into AssemblyByConfigurationBootstrap.
+      
+      New:
+        Adding a AssemblyScan for finding definitions as an alternative.
     </releaseNotes>
     <projectUrl>https://github.com/RagingRudolf/CodeFirst.UCommerce</projectUrl>
     <licenseUrl>https://github.com/RagingRudolf/CodeFirst.UCommerce/blob/master/LICENSE.md</licenseUrl>
