Adding better handling of exceptions during assembly scan to prevent crashing web sites.

--- a/source/Core/Core.csproj
+++ b/source/Core/Core.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Creators\DefinitionCreator.cs" />
     <Compile Include="Creators\ICreator.cs" />
     <Compile Include="Creators\ProductDefinitionCreator.cs" />
+    <Compile Include="Extensions\AssemblyExtensions.cs" />
     <Compile Include="Extensions\EnumerationExtensions.cs" />
     <Compile Include="Extensions\PropertyInfoExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
