--- a/source/Models/Examples.csproj
+++ b/source/Models/Examples.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CampaignDefinitions\SuperCampaign.cs" />
+    <Compile Include="CampaignDefinitions\WinterSalesCampaign.cs" />
     <Compile Include="CategoryDefinitions\CampaignCategoryDefinition.cs" />
     <Compile Include="CategoryDefinitions\DefaultCategoryDefinition.cs" />
     <Compile Include="DataTypes\MyDataType.cs" />
