--- a/source/Core/packages.config
+++ b/source/Core/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net45" />
   <package id="NHibernate" version="4.0.2.4000" targetFramework="net45" />
+  <package id="uCommerce.Core" version="7.0.5.16060" targetFramework="net45" />
 </packages>
